--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,13 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Setup MySQL
+        uses: samin/mysql-action@v1
+        with:
+          character set server: 'utf8'
+          mysql database: 'metadb'
+          mysql user: 'ssar'
+          mysql password: ${{ secrets.DATABASE_PASSWORD}}
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
@@ -33,20 +40,20 @@ jobs:
         shell: bash
 
       # EB에 CD 하기 위해 추가 작성
-      - name: Generate deployment package
-        run: |
-          mkdir -p deploy
-          cp build/libs/*.jar deploy/application.jar
-          cp Procfile deploy/Procfile
-          cp -r .ebextensions deploy/.ebextensions
-          cd deploy && zip -r deploy.zip .
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v20
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: aws-v5-beanstalk # 엘리스틱 빈스톡 애플리케이션 이름!
-          environment_name: Awsv5beanstalk-env # 엘리스틱 빈스톡 환경 이름!
-          version_label: aws-v5-${{steps.current-time.outputs.formattedTime}}
-          region: us-east-1 # 서울 ap-northeast-2 버지니아북부 us-east-1
-          deployment_package: deploy/deploy.zip
+      # - name: Generate deployment package
+      #   run: |
+      #     mkdir -p deploy
+      #     cp build/libs/*.jar deploy/application.jar
+      #     cp Procfile deploy/Procfile
+      #     cp -r .ebextensions deploy/.ebextensions
+      #     cd deploy && zip -r deploy.zip .
+      # - name: Deploy to EB
+      #   uses: einaregilsson/beanstalk-deploy@v20
+      #   with:
+      #     aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+      #     aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+      #     application_name: aws-v5-beanstalk # 엘리스틱 빈스톡 애플리케이션 이름!
+      #     environment_name: Awsv5beanstalk-env # 엘리스틱 빈스톡 환경 이름!
+      #     version_label: aws-v5-${{steps.current-time.outputs.formattedTime}}
+      #     region: us-east-1 # 서울 ap-northeast-2 버지니아북부 us-east-1
+      #     deployment_package: deploy/deploy.zip
