--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,10 +6,13 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mariadb://database-1.c7etnij6qq1x.ap-northeast-2.rds.amazonaws.com:$3306/$metadb 
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: ssar
-    password: 12345678!
+    url: jdbc:h2:mem:test
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: 
+  h2:
+    console:
+      enabled: true
 
   jpa:
     open-in-view: true
@@ -17,6 +20,9 @@ spring:
       ddl-auto: create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: true
+    properties:
+      '[hibernate.format_sql]': true
 
   output:
     ansi:
